Fix Overlap in Tech field

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,3 +1,8 @@
+:global {
+  .input-group .form-control {
+    z-index: 0 !important;
+  }
+}
 .estimator {
   margin: 5px auto;
   &__container {
